Menu changes and fixes

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -27,7 +27,7 @@
             <ul class="uq-header__nav-primary-list">
               <li><a class="uq-header__nav-primary-link" href="https://study.uq.edu.au/">Study</a></li>
               <li><a class="uq-header__nav-primary-link" href="https://research.uq.edu.au/">Research</a></li>
-              <li><a class="uq-header__nav-primary-link" href="https://partners-community.uq.edu.au">Partners and Community</a></li>
+              <li><a class="uq-header__nav-primary-link" href="https://partners-community.uq.edu.au">Partners and community</a></li>
               <li><a class="uq-header__nav-primary-link" href="https://about.uq.edu.au/">About</a></li>
             </ul>
           </nav>
@@ -380,7 +380,7 @@
               <h2 class="uq-footer__navigation-title">Media</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
+                  <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
@@ -391,10 +391,10 @@
               </ul>
             </li>
             <li class="uq-footer__navigation-item">
-              <h2 class="uq-footer__navigation-title">Staff</h2>
+              <h2 class="uq-footer__navigation-title">Working at UQ</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
+                  <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
@@ -403,7 +403,7 @@
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff support</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
@@ -417,7 +417,7 @@
                   <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Program and courses</a>
+                  <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -442,19 +442,19 @@
               <h2 class="uq-footer__navigation-title">Contact</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
+                  <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/departments/unit_types.html" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+                  <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campus maps and transport</a>
+                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
                 </li>
               </ul>
             </li>
@@ -468,7 +468,7 @@
               <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Media</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
+                  <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
@@ -479,10 +479,10 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Staff</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Working at UQ</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
+                  <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
@@ -491,7 +491,7 @@
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff support</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
@@ -505,7 +505,7 @@
                   <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Program and courses</a>
+                  <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -524,25 +524,34 @@
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
                 </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+                </li>
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
               <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Contact</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
+                  <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/departments/unit_types.html" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+                  <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campus maps and transport</a>
+                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
                 </li>
               </ul>
             </li>
@@ -572,16 +581,16 @@
         <nav class="uq-footer__footer" aria-label="Terms and conditions">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
-                  <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
+                  <a href="https://www.uq.edu.au/legal/terms-of-use/" class="uq-footer__link">Privacy and terms of use</a>
+              </li>
+              <li class="uq-footer__footer-item">
+                <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
               </li>
               <li class="uq-footer__footer-item">
                   <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
               </li>
-              <li class="uq-footer__footer-item">
-                  <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
-              </li>
               <li class="uq-footer__footer-menu__item">
-                <a href="https://uq.edu.au/contacts" class="uq-footer__link">Feedback</a>
+                <a href="https://my.uq.edu.au/feedback?r=" class="uq-footer__link">Feedback</a>
               </li>
           </ul>
            </nav>
