--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -264,7 +264,7 @@
             <a  class="uq-header__newglobal-nav-link slide-menu__control" href="#">Research</a>
             <ul>
               <li>
-                <a href="https://research.uq.edu.au/">Research overview</a>
+                <a href="https://research.uq.edu.au/" data-gtm-label="Research > Research overview">Research overview</a>
               </li>
 
               <li>
@@ -301,7 +301,7 @@
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
             <ul>
               <li>
-                <a href="https://partners-community.uq.edu.au">Partners and community overview</a>
+                <a href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community > Partners and community overview">Partners and community overview</a>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
@@ -339,7 +339,7 @@
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">About</a>
             <ul>
               <li>
-                <a href="https://about.uq.edu.au/">About overview</a>
+                <a href="https://about.uq.edu.au/" data-gtm-label="About > About overview">About overview</a>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our profile</a>
