--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -640,6 +640,6 @@
         });
       });
     </script>
-    <script type="text/javascript" src="js/slide-menu.js"></script></body>
+    <script type="text/javascript" src="js/slide-menu.js"></script>
   </body>
 </html>
