--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -46,89 +46,98 @@
         </div>
         <ul>
           <li data-gtm-category="Main navigation">
-            <a class="slide-menu__control" href="#">Study</a>
+            <a class="slide-menu__control" href="#" data-gtm-label="Study">Study</a>
             <ul>
               <li>
-                <a href="/study/programs">Find a program</a>
+                <a href="/study/" data-gtm-label="Study > Study">Study</a>
               </li>
               <li>
-                <a href="/study/agriculture-environment">Agriculture and Environment</a>
+                <a href="/study/programs" data-gtm-label="Study > Find a program">Find a program</a>
               </li>
               <li>
-                <a href="/study/architecture-planning">Architecture and Planning</a>
+                <a href="/study/agriculture-environment" data-gtm-label="Study > Agriculture and Environment">Agriculture and Environment</a>
               </li>
               <li>
-                <a href="/study/arts-humanities-social-sciences">Arts, Humanities and Social Sciences</a>
+                <a href="/study/architecture-planning" data-gtm-label="Study > Architecture and Planning">Architecture and Planning</a>
               </li>
               <li>
-                <a href="/study/business-economics">Business and Economics</a>
+                <a href="/study/arts-humanities-social-sciences" data-gtm-label="Study > Arts, Humanities and Social Sciences">Arts, Humanities and Social Sciences</a>
               </li>
               <li>
-                <a href="/study/education">Education</a>
+                <a href="/study/business-economics" data-gtm-label="Study > Business and Economics">Business and Economics</a>
               </li>
               <li>
-                <a href="/study/engineering-computing">Engineering and Computing</a>
+                <a href="/study/education" data-gtm-label="Study > Education">Education</a>
               </li>
               <li>
-                <a href="/study/health-behavioural-sciences">Health and Behavioural Sciences</a>
+                <a href="/study/engineering-computing" data-gtm-label="Study > Engineering and Computing">Engineering and Computing</a>
               </li>
               <li>
-                <a href="/study/law">Law</a>
+                <a href="/study/health-behavioural-sciences" data-gtm-label="Study > Health and Behavioural Sciences">Health and Behavioural Sciences</a>
               </li>
               <li>
-                <a href="/study/medicine">Medicine</a>
+                <a href="/study/law" data-gtm-label="Study > Law">Law</a>
               </li>
               <li>
-                <a href="/study/science-mathematics">Science and Mathematics</a>
+                <a href="/study/medicine" data-gtm-label="Study > Medicine">Medicine</a>
               </li>
               <li>
-                <a href="/study/micromasters-uqx">MicroMasters and UQx</a>
+                <a href="/study/science-mathematics" data-gtm-label="Study > Science and Mathematics">Science and Mathematics</a>
+              </li>
+              <li>
+                <a href="/study/micromasters-uqx" data-gtm-label="Study > MicroMasters and UQx">MicroMasters and UQx</a>
               </li>
             </ul>
           </li>
           <li data-gtm-category="Main navigation">
-            <a class="slide-menu__control" href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
+            <a class="slide-menu__control" href="/admissions" aria-haspopup="true" aria-expanded="false" data-gtm-label="Admissions">Admissions</a>
             <ul>
               <li>
-                <a href="/admissions/undergraduate">Undergraduate</a>
+                <a href="/admissions" data-gtm-label="Admissions > Admissions">Admissions</a>
               </li>
               <li>
-                <a href="/admissions/honours">Honours</a>
+                <a href="/admissions/undergraduate" data-gtm-label="Admissions > Undergraduate">Undergraduate</a>
               </li>
               <li>
-                <a href="/admissions/postgraduate-coursework">Postgraduate coursework</a>
+                <a href="/admissions/honours" data-gtm-label="Admissions > Honours">Honours</a>
               </li>
               <li>
-                <a href="/admissions/higher-degree-research">Higher degree by research</a>
+                <a href="/admissions/postgraduate-coursework" data-gtm-label="Admissions > Postgraduate coursework">Postgraduate coursework</a>
               </li>
               <li>
-                <a href="/admissions/cross-institutional-study">Cross-institutional study</a>
+                <a href="/admissions/higher-degree-research" data-gtm-label="Admissions > Higher degree by research">Higher degree by research</a>
               </li>
               <li>
-                <a href="/admissions/non-award-study">Non-award study</a>
+                <a href="/admissions/cross-institutional-study" data-gtm-label="Admissions > Cross-institutional study">Cross-institutional study</a>
               </li>
               <li>
-                <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
+                <a href="/admissions/non-award-study" data-gtm-label="Admissions > Non-award study">Non-award study</a>
               </li>
               <li>
-                <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
+                <a href="/admissions/doctor-medicine" data-gtm-label="Admissions > Doctor of Medicine">Doctor of Medicine</a>
+              </li>
+              <li>
+                <a href="https://www.uq.edu.au/studyabroad/how-to-apply" data-gtm-label="Admissions > Study abroad and incoming exchange">Study abroad and incoming exchange</a>
               </li>
             </ul>
           </li>
           <li data-gtm-category="Main navigation">
-            <a class="slide-menu__control" href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
+            <a class="slide-menu__control" href="/university-life" aria-haspopup="true" aria-expanded="false" data-gtm-label="University life">University life</a>
             <ul>
               <li>
-                <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
+                <a href="/university-life" data-gtm-label="University life > University life">University life</a>
               </li>
               <li>
-                <a href="/university-life/getting-prepared-to-come-to-australia">Getting prepared to come to Australia</a>
+                <a href="/university-life/living-in-brisbane" data-gtm-label="University life > Living in Brisbane">Living in Brisbane</a>
               </li>
               <li>
-                <a href="/university-life/campuses-research-sites">Campuses and research sites</a>
+                <a href="/university-life/getting-prepared-to-come-to-australia" data-gtm-label="University life > Getting prepared to come to Australia">Getting prepared to come to Australia</a>
               </li>
               <li>
-                <a href="/university-life/campus-tours">Campus tours</a>
+                <a href="/university-life/campuses-research-sites" data-gtm-label="University life > Campuses and research sites">Campuses and research sites</a>
+              </li>
+              <li>
+                <a href="/university-life/campus-tours" data-gtm-label="University life > Campus tours">Campus tours</a>
               </li>
             </ul>
           </li>
@@ -171,13 +180,13 @@
       </nav>
       <div class="uq-header__search" data-gtm-category="Search">
         <div class="uq-header__search-container">
-          <form action="https://www.uq.edu.au/search/" method="get">
+          <form action="https://www.uq.edu.au/search/" method="get" data-gtm-action="Text search" data-gtm-form-action>
             <fieldset>
               <div class="uq-header__search-query">
                 <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
-                <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input">
+                <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input" data-gtm-trigger="change" data-gtm-form-search>
                 <span class="uq-header__search-query-button">
-                  <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
+                  <input type="submit" name="op" value="Search" class="uq-header__search-query-submit" data-gtm-trigger="click">
                 </span>
               </div>
               <div class="uq-header__search-range">
