--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -445,6 +445,15 @@
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
                 </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+                </li>
+                <li class="uq-footer__navigation-item">
+                  <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+                </li>
               </ul>
             </li>
             <li class="uq-footer__navigation-item">
@@ -463,7 +472,7 @@
                   <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+                  <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
                 </li>
               </ul>
             </li>
@@ -474,7 +483,7 @@
         <nav class="uq-footer__navigation uq-footer--mobile" aria-label="footer navigation mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Media</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
@@ -488,7 +497,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Working at UQ</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working at UQ</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
@@ -508,7 +517,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Current students</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Current students</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
@@ -528,7 +537,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Library</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Library</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
@@ -545,7 +554,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle" data-gtm-action="Toggle">Contact</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Contact</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
@@ -560,7 +569,7 @@
                   <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+                  <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
                 </li>
               </ul>
             </li>
@@ -570,11 +579,11 @@
         <div class="uq-footer__contact">   
           <nav class="uq-footer__contact-item" aria-label="Social Media" data-gtm-category="Social share link">
             <ul class="uq-footer__footer-list uq-footer__contact-social"> 
-              <li class="uq-footer__footer-item"><a aria-label="Facebook" href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" ata-gtm-label="Facebook"></a></li> 
-              <li class="uq-footer__footer-item"><a aria-label="linkedin" href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" data-gtm-label="Linkedin"></a></li> 
-              <li class="uq-footer__footer-item"><a aria-label="Twitter" href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" data-gtm-label="Twitter"></a></li>
-              <li class="uq-footer__footer-item"><a aria-label="Youtube" href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" data-gtm-label="Youtube"></a></li>
-              <li class="uq-footer__footer-item"><a aria-label="Instagram" href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" data-gtm-label="Instagram"></a></li>
+              <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Facebook" data-gtm-label="Facebook"></a></li> 
+              <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
+              <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Twitter" data-gtm-label="Twitter"></a></li>
+              <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Youtube" data-gtm-label="Youtube"></a></li>
+              <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
             </ul>
           </nav> 
           <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
@@ -599,7 +608,7 @@
                   <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
               </li>
               <li class="uq-footer__footer-menu__item">
-                <a href="https://my.uq.edu.au/feedback?r=" class="uq-footer__link">Feedback</a>
+                <a href="https://my.uq.edu.au/feedback?r=https://uq.edu.au" class="uq-footer__link">Feedback</a>
               </li>
           </ul>
            </nav>
