--- a/packages/private-design-output/src/uq_standard.html
+++ b/packages/private-design-output/src/uq_standard.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v6/fonts/Roboto/roboto.css" />
     <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v9/fonts/Merriweather/merriweather.css" />
     <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="https://staff.uq.edu.au/sites/all/themes/custom/uq_standard/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/uq_standard.css" />
   </head>
   <body>
 
