--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -24,8 +24,8 @@
         <div class="uq-header__nav-primary" data-gtm-category="Primary header">
           <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
             <ul class="uq-header__nav-primary-list">
-              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au/" data-gtm-label="Study">Study</a>
-                <div class="uq-header__megamenu">
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au/" data-gtm-label="Study" aria-haspopup="true" aria-expanded="false">Study</a>
+                <div class="uq-header__megamenu" aria-label="Study expanded menu">
                   <div class="uq-header__megamenu-container">
                     <a href="https://study.uq.edu.au/" class="megamenu__overview-link" data-gtm-label="Study > Study overview">Study overview</a>
                     <div class="megamenu__row">
@@ -75,8 +75,8 @@
                   </div>
               </div>
               </li>
-              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/"  data-gtm-label="Research">Research</a>
-                <div class="uq-header__megamenu">
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/"  data-gtm-label="Research" aria-haspopup="true" aria-expanded="false">Research</a>
+                <div class="uq-header__megamenu" aria-label="Research expanded menu">
                   <div class="uq-header__megamenu-container">
                     <a href="https://research.uq.edu.au/" class="megamenu__overview-link" data-gtm-label="Research > Research overview">Research overview</a>
                     <div class="megamenu__row">
@@ -118,8 +118,8 @@
                   </div>
                 </div>
               </li>
-              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community">Partners and community</a>
-                <div class="uq-header__megamenu">
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community" aria-haspopup="true" aria-expanded="false">Partners and community</a>
+                <div class="uq-header__megamenu" aria-label="Partners and community expanded menu">
                   <div class="uq-header__megamenu-container">
                     <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Partners and community > Partners and community overview">Partners and community overview</a>
                     <div class="megamenu__row">
@@ -163,8 +163,8 @@
                   </div>
                 </div>
               </li>
-              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/" data-gtm-label="About">About</a>
-                <div class="uq-header__megamenu">
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/" data-gtm-label="About" aria-haspopup="true" aria-expanded="false">About</a>
+                <div class="uq-header__megamenu" aria-label="About expanded menu">
                   <div class="uq-header__megamenu-container">
                     <a href="https://about.uq.edu.au/" class="megamenu__overview-link" data-gtm-label="About > About overview">About overview</a>
                     <div class="megamenu__row">
