update Community uppercase

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -239,10 +239,10 @@
                   </div>
                 </div>
               </li>
-              <li><a class="uq-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
+              <li><a class="uq-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and community</a>
                 <div class="uq-header__megamenu-wrapper">
                   <div class="uq-header__megamenu">
-                    <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
+                    <a href="#" class="megamenu__overview-link">Partners and community overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__menu">
