--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -27,7 +27,7 @@
             <ul class="uq-header__nav-primary-list">
               <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://study.uq.edu.au/">Study</a></li>
               <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://research.uq.edu.au/">Research</a></li>
-              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://partners-community.uq.edu.au">Partners and Community</a></li>
+              <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://partners-community.uq.edu.au">Partners and community</a></li>
               <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link" href="https://about.uq.edu.au/">About</a></li>
             </ul>
           </nav>
